// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Field /> with <Field.Autocomplete /> matches with snapshot 1`] = `
Array [
  <div
    className="sc-bdVaJa hOgMxB"
  >
    <div
      className="k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="k-Label k-Label--micro"
          htmlFor="autocomplete"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <div
      className="sc-kAzzGY jplcDl"
    >
      <input
        aria-activedescendant=""
        aria-autocomplete="both"
        aria-expanded={false}
        aria-owns="field-results"
        autoComplete="off"
        className="sc-chPdSV ehdkFE"
        id="autocomplete"
        name="field"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Select…"
        type="text"
      />
    </div>
  </div>,
]
`;

exports[`<Field /> with <Field.Input /> in error matches with snapshot 1`] = `
Array [
  <div
    className="sc-bdVaJa hOgMxB"
  >
    <div
      className="k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="k-Label k-Label--micro"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <div
          className="k-Tooltip"
        >
          <button
            aria-describedby="tooltip"
            className="k-ButtonIcon k-ButtonIcon--tooltip--nano k-ButtonIcon--helium k-ButtonIcon--nano k-ButtonIcon--rounded"
            data-dismiss="tooltip"
            data-event="TooltipEvents__open_tooltip"
            data-for="tooltip"
            data-place="right"
            data-tip={true}
            onClick={[Function]}
            tabIndex={null}
            type="button"
          >
            <svg
              className="k-ButtonIcon__svg"
              fill="#fff"
              viewBox="0 0 6 10"
              xmlns="http://www.w3.org/2000/svg"
            >
              
              <path
                d="M1.98 8.486c0 .468.372.852.852.852a.858.858 0 1 0 0-1.716.85.85 0 0 0-.852.864zM3.552 5.63c1.32-.264 2.208-1.2 2.208-2.46C5.76 1.682 4.584.662 2.988.662c-1.2 0-2.16.624-2.748 1.488l.912.996C1.62 2.306 2.232 1.97 3 1.97c.708 0 1.332.432 1.332 1.176 0 .9-.876 1.332-1.8 1.332h-.396v2.196h1.416V5.63z"
              />
            </svg>
          </button>
          <div
            className="__react_component_tooltip place-top type-dark "
            data-id="tooltip"
            id="tooltip"
            role="tooltip"
          >
            Tooltip
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <input
      className="sc-htpNat iVlOqv"
      disabled={false}
      id="input"
      name="field"
      placeholder="Placeholder…"
    />
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <p
      className="sc-gZMcBi giNnHm k-u-color-error k-u-line-height-normal k-u-size-micro k-u-weight-regular"
      style={
        Object {
          "margin": 0,
        }
      }
    >
      Error!
    </p>
  </div>,
]
`;

exports[`<Field /> with <Field.Input /> matches with snapshot 1`] = `
Array [
  <div
    className="sc-bdVaJa hOgMxB"
  >
    <div
      className="k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="k-Label k-Label--micro"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <div
          className="k-Tooltip"
        >
          <button
            aria-describedby="tooltip"
            className="k-ButtonIcon k-ButtonIcon--tooltip--nano k-ButtonIcon--helium k-ButtonIcon--nano k-ButtonIcon--rounded"
            data-dismiss="tooltip"
            data-event="TooltipEvents__open_tooltip"
            data-for="tooltip"
            data-place="right"
            data-tip={true}
            onClick={[Function]}
            tabIndex={null}
            type="button"
          >
            <svg
              className="k-ButtonIcon__svg"
              fill="#fff"
              viewBox="0 0 6 10"
              xmlns="http://www.w3.org/2000/svg"
            >
              
              <path
                d="M1.98 8.486c0 .468.372.852.852.852a.858.858 0 1 0 0-1.716.85.85 0 0 0-.852.864zM3.552 5.63c1.32-.264 2.208-1.2 2.208-2.46C5.76 1.682 4.584.662 2.988.662c-1.2 0-2.16.624-2.748 1.488l.912.996C1.62 2.306 2.232 1.97 3 1.97c.708 0 1.332.432 1.332 1.176 0 .9-.876 1.332-1.8 1.332h-.396v2.196h1.416V5.63z"
              />
            </svg>
          </button>
          <div
            className="__react_component_tooltip place-top type-dark "
            data-id="tooltip"
            id="tooltip"
            role="tooltip"
          >
            Tooltip
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <input
      className="sc-htpNat fTSCbm"
      disabled={false}
      id="input"
      name="field"
      placeholder="Placeholder…"
    />
  </div>,
]
`;

exports[`<Field /> with <Field.Password /> in error matches with snapshot 1`] = `
Array [
  <div
    className="sc-bdVaJa hOgMxB"
  >
    <div
      className="k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="k-Label k-Label--micro"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <div
          className="k-Tooltip"
        >
          <button
            aria-describedby="tooltip"
            className="k-ButtonIcon k-ButtonIcon--tooltip--nano k-ButtonIcon--helium k-ButtonIcon--nano k-ButtonIcon--rounded"
            data-dismiss="tooltip"
            data-event="TooltipEvents__open_tooltip"
            data-for="tooltip"
            data-place="right"
            data-tip={true}
            onClick={[Function]}
            tabIndex={null}
            type="button"
          >
            <svg
              className="k-ButtonIcon__svg"
              fill="#fff"
              viewBox="0 0 6 10"
              xmlns="http://www.w3.org/2000/svg"
            >
              
              <path
                d="M1.98 8.486c0 .468.372.852.852.852a.858.858 0 1 0 0-1.716.85.85 0 0 0-.852.864zM3.552 5.63c1.32-.264 2.208-1.2 2.208-2.46C5.76 1.682 4.584.662 2.988.662c-1.2 0-2.16.624-2.748 1.488l.912.996C1.62 2.306 2.232 1.97 3 1.97c.708 0 1.332.432 1.332 1.176 0 .9-.876 1.332-1.8 1.332h-.396v2.196h1.416V5.63z"
              />
            </svg>
          </button>
          <div
            className="__react_component_tooltip place-top type-dark "
            data-id="tooltip"
            id="tooltip"
            role="tooltip"
          >
            Tooltip
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <div
      className="sc-jTzLTM hwhVrJ"
    >
      <input
        className="sc-htpNat iVlOqv sc-fjdhpX kCYvEC"
        disabled={false}
        id="input"
        name="field"
        placeholder="Placeholder…"
        type="password"
      />
      <span
        aria-pressed={false}
        className="sc-jzJRlG eULSFC"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
        title="Show password"
      >
        <svg
          fill="#222"
          viewBox="0 0 18 12"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M9 0C4 0 0 4 0 6s4 6 9 6 9-4 9-6-4-6-9-6zm0 10c-2.2 0-4-1.8-4-4s1.8-4 4-4 4 1.8 4 4-1.8 4-4 4z"
          />
          <circle
            cx="9"
            cy="6"
            r="2"
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <p
      className="sc-gZMcBi giNnHm k-u-color-error k-u-line-height-normal k-u-size-micro k-u-weight-regular"
      style={
        Object {
          "margin": 0,
        }
      }
    >
      Error!
    </p>
  </div>,
]
`;

exports[`<Field /> with <Field.Password /> matches with snapshot 1`] = `
Array [
  <div
    className="sc-bdVaJa hOgMxB"
  >
    <div
      className="k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="k-Label k-Label--micro"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <div
          className="k-Tooltip"
        >
          <button
            aria-describedby="tooltip"
            className="k-ButtonIcon k-ButtonIcon--tooltip--nano k-ButtonIcon--helium k-ButtonIcon--nano k-ButtonIcon--rounded"
            data-dismiss="tooltip"
            data-event="TooltipEvents__open_tooltip"
            data-for="tooltip"
            data-place="right"
            data-tip={true}
            onClick={[Function]}
            tabIndex={null}
            type="button"
          >
            <svg
              className="k-ButtonIcon__svg"
              fill="#fff"
              viewBox="0 0 6 10"
              xmlns="http://www.w3.org/2000/svg"
            >
              
              <path
                d="M1.98 8.486c0 .468.372.852.852.852a.858.858 0 1 0 0-1.716.85.85 0 0 0-.852.864zM3.552 5.63c1.32-.264 2.208-1.2 2.208-2.46C5.76 1.682 4.584.662 2.988.662c-1.2 0-2.16.624-2.748 1.488l.912.996C1.62 2.306 2.232 1.97 3 1.97c.708 0 1.332.432 1.332 1.176 0 .9-.876 1.332-1.8 1.332h-.396v2.196h1.416V5.63z"
              />
            </svg>
          </button>
          <div
            className="__react_component_tooltip place-top type-dark "
            data-id="tooltip"
            id="tooltip"
            role="tooltip"
          >
            Tooltip
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <div
      className="sc-jTzLTM hwhVrJ"
    >
      <input
        className="sc-htpNat fTSCbm sc-fjdhpX kCYvEC"
        disabled={false}
        id="input"
        name="field"
        placeholder="Placeholder…"
        type="password"
      />
      <span
        aria-pressed={false}
        className="sc-jzJRlG eULSFC"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
        title="Show password"
      >
        <svg
          fill="#222"
          viewBox="0 0 18 12"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M9 0C4 0 0 4 0 6s4 6 9 6 9-4 9-6-4-6-9-6zm0 10c-2.2 0-4-1.8-4-4s1.8-4 4-4 4 1.8 4 4-1.8 4-4 4z"
          />
          <circle
            cx="9"
            cy="6"
            r="2"
          />
        </svg>
      </span>
    </div>
  </div>,
]
`;

exports[`<Field /> with <Field.RadioButtonSet /> matches with snapshot 1`] = `
Array [
  <div
    className="sc-bdVaJa hOgMxB"
  >
    <div
      className="k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="k-Label k-Label--micro"
          htmlFor="option-a"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <fieldset
      className="sc-VigVT buVlsy k-Form-RadioButtonSet k-Form-RadioButtonSet--andromeda"
      disabled={false}
    >
      <div
        className="k-Form-RadioButtonSet__radioContainer"
      >
        <div
          className="sc-gqjmRU jMvANQ k-Form-RadioButton k-Form-RadioButtonSet__radioButton k-Form-RadioButton--andromeda k-Form-RadioButton--disc"
        >
          <input
            className="k-Form-RadioButton__input"
            defaultChecked={true}
            disabled={false}
            id="option-a"
            name="radio"
            type="radio"
          />
          <label
            className="k-Form-RadioButton__label"
            htmlFor="option-a"
          >
            <span
              className="k-Form-RadioButton__labelText"
            >
              Option A
            </span>
          </label>
        </div>
        <div
          className="sc-gqjmRU jMvANQ k-Form-RadioButton k-Form-RadioButtonSet__radioButton k-Form-RadioButton--andromeda k-Form-RadioButton--disc"
        >
          <input
            className="k-Form-RadioButton__input"
            disabled={false}
            id="option-b"
            name="radio"
            type="radio"
          />
          <label
            className="k-Form-RadioButton__label"
            htmlFor="option-b"
          >
            <span
              className="k-Form-RadioButton__labelText"
            >
              Option B
            </span>
          </label>
        </div>
        <div
          className="sc-gqjmRU jMvANQ k-Form-RadioButton k-Form-RadioButtonSet__radioButton k-Form-RadioButton--andromeda k-Form-RadioButton--disc"
        >
          <input
            className="k-Form-RadioButton__input"
            disabled={false}
            id="option-c"
            name="radio"
            type="radio"
          />
          <label
            className="k-Form-RadioButton__label"
            htmlFor="option-c"
          >
            <span
              className="k-Form-RadioButton__labelText"
            >
              Option C
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </div>,
]
`;

exports[`<Field /> with <Field.Select /> matches with snapshot 1`] = `
Array [
  <div
    className="sc-bdVaJa hOgMxB"
  >
    <div
      className="k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="k-Label k-Label--micro"
          htmlFor="select"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <div
      className="k-Select"
    >
      <div
        className="Select Select--single"
      >
        <div
          className="Select-control"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <span
            className="Select-multi-value-wrapper"
            id="react-select-2--value"
          >
            <div
              className="Select-placeholder"
            >
              Select…
            </div>
            <div
              aria-activedescendant="react-select-2--value"
              aria-disabled="false"
              aria-expanded={false}
              aria-owns=""
              className="Select-input"
              onBlur={[Function]}
              onFocus={[Function]}
              role="combobox"
              style={
                Object {
                  "border": 0,
                  "display": "inline-block",
                  "width": 1,
                }
              }
              tabIndex={0}
            />
          </span>
          <span
            className="Select-arrow-zone"
            onMouseDown={[Function]}
          >
            <span
              className="Select-arrow"
              onMouseDown={[Function]}
            />
          </span>
        </div>
      </div>
    </div>
  </div>,
]
`;
